move custom lint rules to repo-tools