@@ -2,7 +2,8 @@
  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  * SPDX-License-Identifier: Apache-2.0
  */
-import aws.sdk.kotlin.gradle.kmp.typedProp
+import aws.sdk.kotlin.gradle.dsl.configureLinting
+import aws.sdk.kotlin.gradle.util.typedProp
 
 buildscript {
     repositories {
@@ -19,7 +20,8 @@ buildscript {
         // only need to include it here, imports in subprojects will work automagically
         classpath("aws.sdk.kotlin:build-plugins") {
             version {
-                require("0.1.1")
+                // require("0.1.1")
+                branch = "lint-rules"
             }
         }
     }
@@ -121,41 +123,22 @@ if (
     }
 }
 
-val ktlint by configurations.creating {
-    attributes {
-        attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-    }
-}
-val ktlintVersion: String by project
-
-dependencies {
-    ktlint("com.pinterest:ktlint:$ktlintVersion")
-    ktlint(project(":ktlint-rules"))
-}
-
 val lintPaths = listOf(
     "**/*.{kt,kts}",
     "!**/generated-src/**",
     "!**/smithyprojections/**",
 )
 
-tasks.register<JavaExec>("ktlint") {
-    description = "Check Kotlin code style."
-    group = "Verification"
-    classpath = configurations.getByName("ktlint")
-    main = "com.pinterest.ktlint.Main"
-    args = lintPaths
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-
-tasks.register<JavaExec>("ktlintFormat") {
-    description = "Auto fix Kotlin code style violations"
-    group = "formatting"
-    classpath = configurations.getByName("ktlint")
-    main = "com.pinterest.ktlint.Main"
-    args = listOf("-F") + lintPaths
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
+configureLinting(lintPaths)
+// val ktlint = configurations.getByName("ktlint")
+// dependencies {
+//     // ktlint("aws.sdk.kotlin:ktlint-rules") {
+//     //     version {
+//     //         branch = "lint-rules"
+//     //     }
+//     // }
+//     ktlint("aws.sdk.kotlin:ktlint-rules")
+// }
 
 apiValidation {
     nonPublicMarkers.add("aws.smithy.kotlin.runtime.InternalApi")
@@ -163,7 +146,6 @@ apiValidation {
     ignoredProjects.addAll(
         setOf(
             "dokka-smithy",
-            "ktlint-rules",
             "aws-signing-tests",
             "test-suite",
             "http-test",
